--- a/app/views/dailycashes/show.html.erb
+++ b/app/views/dailycashes/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Totdriverpay:</strong>
-  <%= @dailycash.totdriverpay %>
+  <% @dailycash.totdriverpay %>
 </p>
 
 <p>
@@ -40,5 +40,9 @@
   <%= @dailycash.banklodgement %>
 </p>
 
+<p>
+  <strong>OverUnder:</strong>
+  <%= @daily
+</p>
 <%= link_to 'Edit', edit_dailycash_path(@dailycash) %> |
 <%= link_to 'Back', dailycashes_path %>
