--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 		 <li><%= link_to "Home", pages_home_path %></li>
 		 <li><%= link_to "Features", pages_features_path %></li>
 		 <li><%= link_to "FAQs", pages_faq_path %></li>
-		 <li><%= link_to "About Us", pages_about_path %></li>
+		 <li><% link_to "About Us", pages_about_path %></li>
 		 <li><%= link_to "Contact Us", pages_contact_path %></li>
 	     <li><%= link_to "Login", dailycashes_path %></li>
 <end>
